--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,34 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+.page.theme_dark { 
+  --heading-text: #db00ff;
+  --section-title-color: #ff0070;
+  --font-family: "IBM Plex Mono", monospace;
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --title-color: #db00ff;
+  --text-color: #f1b2ce;
+  --subtitle-color: #000028;
+  --border-color: #ff0070;
+  --border-bottom: #f1b2ce;
+  --bg-image: url(../images/cover-image-dark.png);
+  --secondary-color: var(--color-purple, #ff007040);
+  .page {
+    background-image: var(--bg-image);
+    background-color: #fff1f7;
+  }
 
-.page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  .decor {
+    display: block;
+  }
+
+  @media (min-width: 320px) and (max-width: 768px) {
+    .header__title {
+      color: var(--heading-text);
+      text-shadow: 4px 4px 0px var(--accent-color);
+    }
+
+    .footer__title {
+      color: var(--heading-text);
+      text-shadow: 2px 2px 0px var(--accent-color);
+    }
+  }
 }
