--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   margin-block-end: 60px;
   padding: 20px;
   min-block-size: 668px;
-  height: 78vh;
+  height: 100vh;
 }
 
 .header__theme-menu {
@@ -239,7 +239,7 @@
   margin-block-end: 63px;
 }
 
-.section:last-of-type .section__image {
+.section__image {
   -o-object-fit: cover;
   object-fit: cover;
   -o-object-position: center;
@@ -248,17 +248,15 @@
   height: 100%;
 }
 
-.section:last-of-type .section__image:first-of-type,
-.section:last-of-type .section__image:last-of-type {
+.section__gallery .section__image-large_horizontal {
   grid-column: span 2;
 }
 
-.section:last-of-type .section__image:nth-of-type(2),
-.section:last-of-type .section__image:nth-of-type(3) {
+.section__gallery .section__image-large_vertical {
   grid-row: span 2;
 }
 
-.section:last-of-type {
+.section__gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
@@ -287,14 +285,14 @@
   gap: 20px;
 }
 
-.section:first-of-type,
-.section:nth-of-type(3) {
+
+.section__image-large_vertical {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.section:last-of-type .section__title {
+.section__gallery .section__title {
   grid-column: 1/-1;
   width: 100%;
   margin: 0;
@@ -312,7 +310,7 @@
   flex-direction: row;
   padding: 20px;
   min-height: 668px;
-  height: 95vh;
+  height: 100vh;
   margin-block-start: 62px;
   justify-content: center;
   align-items: center;
@@ -334,7 +332,6 @@
   }
 
   .header {
-    height: 68vh;
     margin-block-end: 40px;
     padding: 10px;
   }
@@ -408,11 +405,11 @@
     margin-block-end: 50px;
   }
 
-  .section:nth-of-type(2) .section__title {
+  .section__image-large_vertical .section__title {
     width: 100%;
   }
 
-  .section:nth-of-type(2) .section__article-list {
+  .section__image-large_vertical .section__article-list {
     justify-content: space-between;
     margin-block-end: 50px;
     gap: 20px;
@@ -421,41 +418,38 @@
     flex-direction: column;
   }
 
-  .section:nth-of-type(2) .section__article-item {
+  .section__image-large_vertical .section__article-item {
     flex: 1 0 auto;
     width: 103%;
   }
 
-  .section:first-of-type .section__title,
-  .section:nth-of-type(3) .section__title {
+  .section__image-large_vertical .section__title {
     width: 100%;
     margin-bottom: 20px;
     max-width: 400px;
   }
 
-  .section:first-of-type .section__article-list,
-  .section:nth-of-type(3) .section__article-list {
+  .section__image-large_vertical .section__article-list {
     width: 100%;
     margin-block-end: 50px;
   }
 
-  .section:last-of-type .section__image {
+  .section__gallery .section__image {
     width: 100%;
     height: auto;
   }
 
-  .section:last-of-type .section__image-container {
+  .section__gallery .section__image-container {
     width: 100px;
   }
 
-  .section:last-of-type {
+  .section__gallery {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
 
   .footer {
-    height: 68vh;
     margin-block-start: 40px;
   }
 
@@ -472,10 +466,6 @@
   .header__theme-menu-list {
     flex-direction: column;
     gap: 13px;
-  }
-
-  .header {
-    height: 104vh;
   }
 
   .header__title {
@@ -514,16 +504,14 @@
     flex-wrap: wrap;
   }
 
-  .section:first-of-type .section__title,
-  .section:nth-of-type(3) .section__title {
+  .section__image-large_vertical .section__title {
     max-width: 230px;
   }
 
-  .section:first-of-type .section__article-list,
-  .section:nth-of-type(3) .section__article-list {
+  .section__image-large_vertical .section__article-list {
     width: 64%;
   }
-  .section:nth-of-type(2) .section__article-item {
+  .section__image-large_vertical .section__article-item {
     flex: 1 0 auto;
     width: 100%;
   }
